# Algorithms_and_data_structures

./: ..gitignore.swp
Module1/Task2/: main.cpp
Module1/Task5/: CMakeLists.txt  main.cpp
Module1/Task6/: CMakeLists.txt  main.cpp
Module1/Task7/: CMakeLists.txt  main.cpp
Module2/Task1/: task1.cpp
Module2/Task2/: task2.cpp
Module2/Task3/: CMakeLists.txt  task3.cpp
Module2/Task4/: CMakeLists.txt  task4.cpp
Module3/Task1/: CMakeLists.txt  arcGraph.cpp  arcGraph.hpp  iGraph.hpp  listGraph.cpp  listGraph.hpp  main.cpp  matrixGraph.cpp  matrixGraph.hpp  setGraph.cpp  setGraph.hpp  task1.cpp
Module3/Task2/: CMakeLists.txt  task2.cpp
Module3/Task3/: CMakeLists.txt  main.cpp  task3.cpp
RK1/task1/: main.cpp
RK1/task2/: main.cpp
RK1/task3/: main.cpp
RK3/Task1/: main.cpp
RK3/Task2/: CMakeLists.txt  main.cpp
Task1/: main.cpp
Task2/: main.cpp
Task3/: main.cpp
Task4/: main.cpp
Task6/: main.cpp
Task7/: CMakeLists.txt  main.cpp
